consistent toolbar display

--- a/elohim-app/src/app/lamad/components/lamad-layout/lamad-layout.component.css
+++ b/elohim-app/src/app/lamad/components/lamad-layout/lamad-layout.component.css
@@ -198,6 +198,9 @@
   width: 100%;
   margin: 0 auto;
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 /* Remove padding for full-width components like lamad-home */
